force-app/main/default/objects/Activity/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <formula>IF(ISPICKVAL( Task_Type__c ,&quot;TO-DO&quot;),
    CASE(Difficulty__c,
    &quot;Trivial&quot;,1,
    &quot;Easy&quot;,2,
    &quot;Medium&quot;,3,
    5),
    IF(ISPICKVAL(Task_Type__c,&quot;Daily&quot;),
        CASE(Difficulty__c,
            &quot;Trivial&quot;,0.5,
            &quot;Easy&quot;,1,
            &quot;Medium&quot;,1.5,
            2.5),1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>