force-app/main/default/objects/Activity/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <defaultValue>(&quot;NA&quot;)</defaultValue>
    <label>Task Name</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>