force-app/main/default/objects/Activity/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TO-DO</fullName>
                <default>true</default>
                <label>TO-DO</label>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Habit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>